--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Dorgesh-Kaan Lights Plugin
+author=andmcadams
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=A plugin that makes it easier to find broken lamps in Dorgesh-Kaan.
+tags=dorgesh,lamps
+plugins=com.dk-lights-plugin.DKLightsPlugin
