Fix package name

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,4 +3,4 @@ author=andmcadams
 support=
 description=A plugin that makes it easier to find broken lamps in Dorgesh-Kaan.
 tags=dorgesh,lamps
-plugins=com.dk-lights-plugin.DKLightsPlugin
+plugins=com.dklights.DKLightsPlugin
