Add support and update description

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Dorgesh-Kaan Lights Plugin
 author=andmcadams
-support=
-description=A plugin that makes it easier to find broken lamps in Dorgesh-Kaan.
+support=https://github.com/andmcadams/dk-lights
+description=Makes it easier to find broken lamps in Dorgesh-Kaan.
 tags=dorgesh,lamps
 plugins=com.dklights.DKLightsPlugin
