--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Dorgesh-Kaan Lights Plugin
-author=andmcadams
+author=andmcadams,tmgdejong
 support=https://github.com/andmcadams/dk-lights
 description=Makes it easier to find broken lamps in Dorgesh-Kaan.
 tags=dorgesh,lamps
