--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,5 +2,5 @@ displayName=Dorgesh-Kaan Lights Plugin
 author=andmcadams,tmgdejong
 support=https://github.com/andmcadams/dk-lights
 description=Makes it easier to find broken lamps in Dorgesh-Kaan.
-tags=dorgesh,lamps
+tags=dorgesh,lamps,lights,kaan,dorgesh-kaan
 plugins=com.dklights.DKLightsPlugin
